[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pubsub-client"
version = "0.1.0"
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
description = "A simple and robust WebSocket Pub/Sub client for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pubsub", "websocket", "socketio", "messaging", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-socketio[client]>=5.10.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/venantvr/Python.PubSub.Client"
Repository = "https://github.com/venantvr/Python.PubSub.Client.git"
"Bug Tracker" = "https://github.com/venantvr/Python.PubSub.Client/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pubsub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=pubsub --cov-report=term-missing"
